# mcp_a2a

./: .env  alembic.ini  pyproject.toml  pytest.ini  run.sh
alembic/: env.py
alembic/versions/: 563ed8c2a9aa_.py  eda9cee14cd0_.py
app/: main.py
app/application/services/: app_config_service.py  status_service.py
app/domain/models/: app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  tool_result.py
app/domain/repositories/: app_config_repository.py
app/infra/logging/: logging.py
app/infra/models/: __init__.py  demo.py
app/infra/repositories/: file_app_config_repository.py
app/infra/storage/: cos.py  postgres.py  redis.py
app/interfaces/: dependencies.py  service_dependencies.py
config/: config.yaml
core/: config.py
learning/async/: asyncio_demo.py  coroutine_demo.py  lock_demo.py  multi_process_demo.py  multi_thread_demo.py
learning/base/: str_demo.py
learning/containers/: dict_demo.py  gen_demo.py  iter_demo.py  list_demo.py  map_demo.py
learning/decorators/: __init__.py  class_decorator_demo.py  log_demo.py  rename_demo.py  retry_demo.py  timer_demo.py  validator_demo.py
learning/exceptions/: custom_exceptions.py  http_exceptions.py
learning/fastapi/: docs_demo.py  jwt_demo.py  main_demo.py  pydantic_demo.py
learning/file/: file.py  large_log.txt  os.py
learning/llm/: react_agent_demo.py
learning/schedule/: apscheduler_demo.py  sched_demo.py  schedule_demo.py  sleep_demo.py  timeloop_demo.py
learning/shells/: pip.sh  poetry.sh  python.sh  uv.sh  venv.sh
tests/: conftest.py
tests/websocket/: websocket_demo.py
(+34 files in other folders)
