[project]
name = "mcp-a2a"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.4",
    "browser-use-sdk>=2.0.13",
    "cos-python-sdk-v5>=1.9.41",
    "fastapi>=0.128.0",
    "filelock>=3.20.3",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "json-repair>=0.55.0",
    "jwt>=1.4.0",
    "mcp[cli]>=1.25.0",
    "openai>=2.15.0",
    "pika>=1.3.2",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.45",
    "timeloop>=1.0.2",
    "uvicorn[standard]>=0.40.0",
    "websocket>=0.2.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
